# Gemini-lovart-image-automation

./: .env.example  .gitignore  PROJECT_OVERVIEW.md  README.md  agent.md  app.py  build_exe.bat  config.example.yaml  excel_reader.py  gemini_api.py  gemini_bot.py  gemini_browser_session.py  lovart_api.py  lovart_bot.py  main.py  model_provider.py  network_retry.py  nvidia_api.py  preamble.txt  prompt_settings.py  pyproject.toml  requirements.txt  setup_windows.bat  setup_windows.ps1  setup_wizard.py  task-6-report.md  test_result.py  updater.py  utils.py  version.json  version.py  webui.py  启动无黑框本地客户端.vbs  启动桌面客户端.bat  启动网页控制台.bat
.playwright-mcp/: page-2026-05-11T07-31-50-216Z.yml  page-2026-05-11T07-33-36-206Z.yml  page-2026-05-11T07-33-58-820Z.yml  page-2026-05-11T07-34-29-417Z.yml  page-2026-05-11T07-35-17-486Z.yml  page-2026-05-11T07-35-53-566Z.yml  page-2026-05-11T07-36-25-673Z.yml  page-2026-05-11T07-37-12-377Z.yml  page-2026-05-11T07-37-46-536Z.yml  page-2026-05-11T07-38-25-736Z.yml  page-2026-05-11T07-39-00-778Z.yml  page-2026-05-11T07-40-07-958Z.yml  page-2026-05-11T07-41-57-209Z.yml  page-2026-05-11T07-42-14-500Z.yml  page-2026-05-11T07-42-51-083Z.yml  page-2026-05-11T07-43-05-462Z.yml  page-2026-05-11T07-43-34-321Z.yml  page-2026-05-11T07-43-57-493Z.yml  page-2026-05-11T07-44-15-970Z.yml  page-2026-05-11T07-44-40-119Z.yml  page-2026-05-11T07-45-10-092Z.yml  page-2026-05-11T07-45-51-926Z.yml  page-2026-05-11T07-46-21-377Z.yml  page-2026-05-11T07-46-52-331Z.yml  page-2026-05-11T07-49-46-655Z.yml  page-2026-05-11T07-50-25-701Z.yml
tests/: test_high_priority.py  (+10 more)
(+7 files in other folders)
