[project]
name = "image-automation"
version = "0.1.0"
description = "Local Excel to Gemini to Lovart product image automation"
requires-python = ">=3.12,<3.15"
dependencies = [
  "openpyxl==3.1.5",
  "Pillow<12.0.0",
  "PyYAML==6.0.3",
  "playwright==1.59.0",
  "tenacity>=9.1.4",
  "rich>=15.0.0",
  "gradio>=6.17.3",
  "pydantic>=2.13.4",
  "pyinstaller>=6.20.0",
  "pywebview>=6.2.1",
]

[tool.uv]
package = false
